tests/samples/negative/generics/ambiguous_generic_struct.ax
module ambiguous_generic_struct;

import samplelib.generic_a;
import samplelib.generic_b;

fn main() -> i32 {
    let boxed: Box<i32> = Box<i32> { value: 1 };
    return boxed.value;
}
